# electralens-ai

./: .gitignore  LICENSE  README.md  build_exe.ps1  electralens_app.py  pyproject.toml  requirements-build.txt  requirements-report.txt  requirements.txt
.github/workflows/: ci.yml
docs/: DESIGN.md
electralens/: __init__.py  __main__.py  analyzer.py  app.py  cli.py  features.py  models.py  ocr.py  probe.py  report.py  samples.py  util.py  waveform.py
tests/: test_analyzer.py  test_features.py  test_waveform_ocr.py
tools/: generate_icon.py  make_report.py
web_examples/: sources.md
