[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "electralens-ai"
version = "1.0.0"
description = "사진 한 장으로 전기전자 상황을 읽는 오프라인 데스크톱 AI 조교"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ElectraLens AI" }]
keywords = ["electronics", "education", "image-analysis", "tkinter", "offline"]
dependencies = ["Pillow>=10.0", "numpy>=1.24"]

[project.optional-dependencies]
ocr = ["pytesseract>=0.3.10"]
report = ["python-docx>=1.1"]
dev = ["pytest>=7.0"]

[project.scripts]
electralens = "electralens.cli:main"

[project.urls]
Homepage = "https://github.com/claytams/electralens-ai"

[tool.setuptools]
packages = ["electralens"]

[tool.setuptools.package-data]
electralens = ["assets/*.ico"]

[tool.pytest.ini_options]
testpaths = ["tests"]
